test fix overflow mobile home page

--- a/css/main.css
+++ b/css/main.css
@@ -388,12 +388,9 @@ a {
   height: 100vh;
   max-height: 100%; }
 
-html, .no-scroll {
-  overflow-x: hidden !important;
-  overflow-y: hidden !important; }
-
-html, .scroll {
-  overflow: hidden visible; }
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden; }
 
 body {
   overflow: hidden; }
