--- a/css/scss/layout/_body.scss
+++ b/css/scss/layout/_body.scss
@@ -1,9 +1,6 @@
-html, .no-scroll {
-  overflow-x: hidden !important;
-  overflow-y: hidden !important;
-}
-html, .scroll {
-  overflow: hidden visible;
+html, body {
+  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 
